plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
    id "org.asciidoctor.jvm.convert" version "3.3.2"
}

group = 'revi1337'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    asciidoctorExt
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'

    testImplementation 'com.redis.testcontainers:testcontainers-redis-junit:1.6.4'

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
}

ext {
    snippetsDir = file('build/generated-snippets')
    applicationName = 'onsquad'
}

String ENABLE_PREVIEW = "--enable-preview"
String PARAMETERS = "-parameters"

def gradleProfile = project.hasProperty("profile") ?
        project.property("profile").toString() : "test"

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs(ENABLE_PREVIEW)
    systemProperty("spring.profiles.active", gradleProfile)
    outputs.dir snippetsDir
}

asciidoctor {
    configurations 'asciidoctorExt'

    sources {
        include('**/index.adoc')
    }
    baseDirFollowsSourceFile()
    inputs.dir snippetsDir
    dependsOn test
}

asciidoctor.doFirst {
    delete file('src/main/resources/static')
}

task createDocument(type: Copy) {
    dependsOn asciidoctor
    from file("build/docs/asciidoc")
    into file("src/main/resources/static")
}

bootJar{
    dependsOn createDocument
    from("${asciidoctor.outputDir}") {
        into 'static'
    }
    archivesBaseName = applicationName
    archiveFileName = applicationName + '.jar'
    archiveVersion = "0.0.1"
}

jar {
    enabled = false
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add(ENABLE_PREVIEW)
    options.compilerArgs.add(PARAMETERS)
}
